--- a/HTML5 e CSS3/barbearia_atividade/contato.html
+++ b/HTML5 e CSS3/barbearia_atividade/contato.html
@@ -23,7 +23,7 @@
         </header>
 
 
-        <main>
+        <main class="contato-main">
 
             <form>
                 <label for="nomesobrenome">Nome e Sobrenome</label>
